--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,4 @@
-target/
-!.mvn/wrapper/maven-wrapper.jar
+.idea/
+*.swp
+*.swo
 
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-
-### IntelliJ IDEA ###
-.idea
-*.iws
-*.iml
-*.ipr
-
-### NetBeans ###
-nbproject/private/
-build/
-nbbuild/
-dist/
-nbdist/
-.nb-gradle/
