--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>com.rahpors</groupId>
 	<artifactId>UdemyTutorial</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 
 	<name>UdemyTutorial</name>
 	<description>Udemy course</description>
